test/org/midica/testfiles/failing/block-else-not-alone-2.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if=$x
	0  c  /4
}
{ else
	0  c  /4
} else